<resources>
    <string name="app_name">Rconnect DT-R00</string>
    <string name="Relay_1">Реле 1</string>
    <string name="Relay_2">Реле 2</string>
    <string name="Relay_3">Реле 3</string>
    <string name="Relay_4">Реле 4</string>
    <string name="Relay_5">Реле 5</string>
    <string name="Relay_6">Реле 6</string>
    <string name="Relay_7">Реле 7</string>
    <string name="Relay_8">Реле 8</string>

    <string name="On">Вкл</string>
    <string name="Pulse">Импульс</string>
    <string name="time">Время в сек</string>
    <string name="set_ip">Установить IP</string>
    <string name="ip_address">Ip адрес</string>
    <string name="Save">Сохранить</string>
    <string name="Example">Пример: 192.168.60.60:8000</string>
    <string name="no_internet">Отсутствует интернет соединение!</string>
    <string name="Exit">Выход</string>
    <string name="Settings">Настройки</string>
    <string name="ChangeLayout">Изменить рсположение</string>
    <string name="Current_IP">Текущий IP:</string>
    <string name="i_enable_wifi">Ок</string>
    <string name="delay">Задержка:</string>
    <string name="hide">Скрыть</string>
    <string name="authorization">Авторизация</string>
    <string name="enter_ip_192_168_50_10_6000">Введите IP адрес устройства в формате: 192.168.50.10:6000</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="apply">Подтвердить</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="add_device">Добавить устройство</string>
    <string name="ip">192.168.60.60:80</string>
    <string name="enter">Войти</string>

</resources>
