<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/text_enter_ip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/enter_ip_192_168_50_10_6000"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/text_auth"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintStart_toStartOf="@+id/text_auth"
        app:layout_constraintTop_toBottomOf="@+id/text_auth"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/input_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="ip_address"
        android:backgroundTint="#004524"
        android:hint="@string/ip_address"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/text_enter_ip"
        app:layout_constraintStart_toStartOf="@+id/text_enter_ip"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_ip" />

    <TextView
        android:id="@+id/text_enter_user_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_ip"
        app:layout_constraintWidth_percent="0.45" />

    <EditText
        android:id="@+id/input_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="user_name"
        android:backgroundTint="#004524"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minWidth="52dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_enter_user_name"
        app:layout_constraintStart_toStartOf="@+id/text_enter_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_user_name" />

    <TextView
        android:id="@+id/text_enter_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_user_name"
        app:layout_constraintWidth_percent="0.2" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:backgroundTint="#004524"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minWidth="52dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_enter_password"
        app:layout_constraintStart_toStartOf="@+id/text_enter_password"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_password" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#004524"
        android:padding="5dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:checked="true"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:theme="@style/BoxRemember"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>